# FailSafe

./: .gitignore  README.md  install.py  pyproject.toml  roadmap.md
.claude-plugin/: plugin.json
hooks/: failsafe.py  hooks.json  slopguard.py  test_cargo.py  test_cloud.py  test_config.py  test_curl.py  test_e2e.py  test_gems.py  test_git.py  test_lockfile.py  test_manifest.py  test_rm.py  test_secrets.py  test_targets.py
src/failsafe_hook/: __main__.py  _install.py  core.py
